2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Move interrupt_stack_size field from CPU Table to
	Configuration Table. Eliminate CPU Table from all ports. Delete
	references to CPU Table in all forms.

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove "*cpp:". Remove qrtems_debug.

2007-03-10	Joel Sherrill <joel@OARcorp.com>

	PR 1227/bsps
	* include/bsp.h: Remove MAX_LONG_TEST_DURATION and
	MAX_SHORT_TEST_DURATION. They are obsolete and unused.

2007-01-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Use MKDIR_P instead of mkdir_p.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Use AC_CONFIG_HEADER instead of AM_CONFIG_HEADER.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2005-01-02	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove build-variant support.

2004-10-20	Ralf Corsepius <ralf_corsepius@rtems.org>

	* include/bsp.h: Remove tm27 stuff.
	* include/tm27.h: New.
	* Makefile.am: Add tm27.h

2004-09-24	Ralf Corsepius <ralf_corsepius@rtems.org>

	* configure.ac: Require automake > 1.9.

2004-04-01	Ralf Corsepius <ralf_corsepius@rtems.org>

	* include/bsp.h: Include <rtems/clockdrv.h> instead of <clockdrv.h>.
	* include/bsp.h: Include <rtems/console.h> instead of <console.h>.

2004-02-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect changes to bsp.am. 
	Preinstall dist_project_lib*.

2004-02-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect changes to bsp.am.

2004-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add PREINSTALL_DIRS.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Misc cleanups and fixes.
