@@ -1,3 +1,8 @@
+2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* include/bsp.h: Eliminate copies of the Configuration Table. Use the
+	RTEMS provided accessor macros to obtain configuration fields.
+
 2007-12-10	Till Straumann <strauman@slac.stanford.edu>
 	
 	* Makefile.am: use shared exception/interrupt support
